@@ -20,10 +20,11 @@
  */
 
 #include <private/plugins/compressor.h>
+#include <lsp-plug.in/common/alloc.h>
 #include <lsp-plug.in/common/debug.h>
 #include <lsp-plug.in/dsp/dsp.h>
 #include <lsp-plug.in/dsp-units/units.h>
-#include <lsp-plug.in/common/alloc.h>
+#include <lsp-plug.in/plug-fw/core/AudioBuffer.h>
 #include <lsp-plug.in/shared/debug.h>
 #include <lsp-plug.in/shared/id_colors.h>
 
@@ -86,6 +87,7 @@ namespace lsp
             vChannels       = NULL;
             vCurve          = NULL;
             vTime           = NULL;
+            vEmptyBuffer    = NULL;
             bPause          = false;
             bClear          = false;
             bMSListen       = false;
@@ -122,6 +124,7 @@ namespace lsp
             size_t curve_size       = (meta::compressor_metadata::CURVE_MESH_SIZE) * sizeof(float);
             size_t history_size     = (meta::compressor_metadata::TIME_MESH_SIZE) * sizeof(float);
             size_t allocate         = channel_size +
+                                      buf_size +
                                       buf_size * channels * 5 +
                                       curve_size +
                                       history_size;
@@ -133,6 +136,7 @@ namespace lsp
             vChannels               = advance_ptr_bytes<channel_t>(ptr, channel_size);
             vCurve                  = advance_ptr_bytes<float>(ptr, curve_size);
             vTime                   = advance_ptr_bytes<float>(ptr, history_size);
+            vEmptyBuffer            = advance_ptr_bytes<float>(ptr, buf_size);
 
             // Initialize channels
             for (size_t i=0; i<channels; ++i)
@@ -176,6 +180,7 @@ namespace lsp
                 c->pIn              = NULL;
                 c->pOut             = NULL;
                 c->pSC              = NULL;
+                c->pShmIn           = NULL;
 
                 for (size_t j=0; j<G_TOTAL; ++j)
                     c->pGraph[j]        = NULL;
@@ -235,6 +240,12 @@ namespace lsp
                 for (size_t i=0; i<channels; ++i)
                     BIND_PORT(vChannels[i].pSC);
             }
+
+            // Shared memory link
+            lsp_trace("Binding shared memory link");
+            SKIP_PORT("Shared memory link name");
+            for (size_t i=0; i<channels; ++i)
+                BIND_PORT(vChannels[i].pShmIn);
 
             // Common ports
             lsp_trace("Binding common ports");
@@ -360,6 +371,8 @@ namespace lsp
                 BIND_PORT(c->pMeter[M_IN]);
                 BIND_PORT(c->pMeter[M_OUT]);
             }
+
+            dsp::fill_zero(vEmptyBuffer, COMP_BUF_SIZE);
 
             // Initialize curve (logarithmic) in range of -72 .. +24 db
             float delta = (meta::compressor_metadata::CURVE_DB_MAX - meta::compressor_metadata::CURVE_DB_MIN) / (meta::compressor_metadata::CURVE_MESH_SIZE-1);
@@ -496,6 +509,32 @@ namespace lsp
             return dspu::SCS_MIDDLE;
         }
 
+        uint32_t compressor::decode_sidechain_type(uint32_t sc) const
+        {
+            if (bSidechain)
+            {
+                switch (sc)
+                {
+                    case 0: return SCT_FEED_FORWARD;
+                    case 1: return SCT_FEED_BACK;
+                    case 2: return SCT_EXTERNAL;
+                    case 3: return SCT_LINK;
+                    default: break;
+                }
+            }
+            else
+            {
+                switch (sc)
+                {
+                    case 0: return SCT_FEED_FORWARD;
+                    case 1: return SCT_FEED_BACK;
+                    case 2: return SCT_LINK;
+                    default: break;
+                }
+            }
+
+            return SCT_FEED_FORWARD;
+        }
 
         void compressor::update_settings()
         {
@@ -522,14 +561,14 @@ namespace lsp
                 c->sBypass.set_bypass(bypass);
 
                 // Update sidechain settings
-                c->nScType      = c->pScType->value();
+                c->nScType      = decode_sidechain_type(c->pScType->value());
                 c->bScListen    = c->pScListen->value() >= 0.5f;
 
                 c->sSC.set_gain(c->pScPreamp->value());
                 c->sSC.set_mode((c->pScMode != NULL) ? c->pScMode->value() : dspu::SCM_RMS);
                 c->sSC.set_source(decode_sidechain_source(sc_src, bStereoSplit, i));
                 c->sSC.set_reactivity(c->pScReactivity->value());
-                c->sSC.set_stereo_mode(((nMode == CM_MS) && (c->nScType != SCT_EXTERNAL)) ? dspu::SCSM_MIDSIDE : dspu::SCSM_STEREO);
+                c->sSC.set_stereo_mode(((nMode == CM_MS) && (!use_sidechain(*c))) ? dspu::SCSM_MIDSIDE : dspu::SCSM_STEREO);
 
                 // Setup hi-pass filter for sidechain
                 size_t hp_slope = c->pScHpfMode->value() * 2;
@@ -648,6 +687,31 @@ namespace lsp
             dsp::mul3(c->vOut, c->vGain, c->vIn, samples); // Adjust gain for input
         }
 
+        inline bool compressor::use_sidechain(const channel_t & c)
+        {
+            switch (c.nScType)
+            {
+                case SCT_EXTERNAL:
+                case SCT_LINK:
+                    return true;
+                default:
+                    break;
+            }
+            return false;
+        }
+
+        inline float *compressor::select_buffer(const channel_t & c, float *in, float *sc, float *shm)
+        {
+            switch (c.nScType)
+            {
+                case SCT_EXTERNAL: return sc;
+                case SCT_LINK: return shm;
+                default: break;
+            }
+
+            return in;
+        }
+
         void compressor::process(size_t samples)
         {
             size_t channels = (nMode == CM_MONO) ? 1 : 2;
@@ -656,6 +720,7 @@ namespace lsp
             float *in_buf[2];   // Input buffer
             float *out_buf[2];  // Output buffer
             float *sc_buf[2];   // Sidechain source
+            float *shm_buf[2];  // Sidechain source
             float *in[2];       // Buffet to pass to sidechain
 
             // Prepare audio channels
@@ -667,10 +732,15 @@ namespace lsp
                 in_buf[i]           = c->pIn->buffer<float>();
                 out_buf[i]          = c->pOut->buffer<float>();
                 sc_buf[i]           = (c->pSC != NULL) ? c->pSC->buffer<float>() : in_buf[i];
+                shm_buf[i]          = vEmptyBuffer;
+
+                core::AudioBuffer *buf = (c->pShmIn != NULL) ? c->pShmIn->buffer<core::AudioBuffer>() : NULL;
+                if ((buf != NULL) && (buf->active()))
+                    shm_buf[i]          = buf->buffer();
 
                 // Analyze channel mode
                 if (c->nScType == SCT_FEED_BACK)
-                    feedback |= (1 << i);
+                    feedback           |= (1 << i);
             }
 
             // Perform compression
@@ -712,21 +782,21 @@ namespace lsp
                         if (channels > 1) // Process second channel in stereo pair
                         {
                             // First channel
-                            in[0]   = (vChannels[0].nScType == SCT_EXTERNAL) ? sc_buf[0] : vChannels[0].vIn;
-                            in[1]   = (vChannels[0].nScType == SCT_EXTERNAL) ? sc_buf[1] : vChannels[1].vIn;
+                            in[0]   = select_buffer(vChannels[0], vChannels[0].vIn, sc_buf[0], shm_buf[0]);
+                            in[1]   = select_buffer(vChannels[0], vChannels[1].vIn, sc_buf[1], shm_buf[1]);
                             process_non_feedback(&vChannels[0], in, to_process);
                             vChannels[0].fFeedback      = vChannels[0].vOut[to_process-1];
 
                             // Second channel
-                            in[0]   = (vChannels[1].nScType == SCT_EXTERNAL) ? sc_buf[0] : vChannels[0].vIn;
-                            in[1]   = (vChannels[1].nScType == SCT_EXTERNAL) ? sc_buf[1] : vChannels[1].vIn;
+                            in[0]   = select_buffer(vChannels[1], vChannels[0].vIn, sc_buf[0], shm_buf[0]);
+                            in[1]   = select_buffer(vChannels[1], vChannels[1].vIn, sc_buf[1], shm_buf[1]);
                             process_non_feedback(&vChannels[1], in, to_process);
                             vChannels[1].fFeedback      = vChannels[1].vOut[to_process-1];
                         }
                         else
                         {
                             // Only one channel
-                            in[0]   = (vChannels[0].nScType == SCT_EXTERNAL) ? sc_buf[0] : vChannels[0].vIn;
+                            in[0]   = select_buffer(vChannels[0], vChannels[0].vIn, sc_buf[0], shm_buf[0]);
                             in[1]   = NULL;
                             process_non_feedback(&vChannels[0], in, to_process);
                             vChannels[0].fFeedback      = vChannels[0].vOut[to_process-1];
@@ -741,8 +811,8 @@ namespace lsp
                         if (channels > 1)
                         {
                             // Second channel
-                            in[0]   = (vChannels[1].nScType == SCT_EXTERNAL) ? sc_buf[0] : vChannels[0].vIn;
-                            in[1]   = (vChannels[1].nScType == SCT_EXTERNAL) ? sc_buf[1] : vChannels[1].vIn;
+                            in[0]   = select_buffer(vChannels[1], vChannels[0].vIn, sc_buf[0], shm_buf[0]);
+                            in[1]   = select_buffer(vChannels[1], vChannels[1].vIn, sc_buf[1], shm_buf[1]);
                             process_non_feedback(&vChannels[1], in, to_process);
 
                             // Process feedback channel
@@ -770,8 +840,8 @@ namespace lsp
                     {
                         // 0=FF/EXT 1=FB
                         // First channel
-                        in[0]   = (vChannels[0].nScType == SCT_EXTERNAL) ? sc_buf[0] : vChannels[0].vIn;
-                        in[1]   = (vChannels[0].nScType == SCT_EXTERNAL) ? sc_buf[1] : vChannels[1].vIn;
+                        in[0]   = select_buffer(vChannels[0], vChannels[0].vIn, sc_buf[0], shm_buf[0]);
+                        in[1]   = select_buffer(vChannels[0], vChannels[1].vIn, sc_buf[1], shm_buf[1]);
                         process_non_feedback(&vChannels[0], in, to_process);
 
                         // Process feedback channel
@@ -1165,6 +1235,7 @@ namespace lsp
                     v->write("pIn", c->pIn);
                     v->write("pOut", c->pOut);
                     v->write("pSC", c->pSC);
+                    v->write("pShmIn", c->pShmIn);
                     v->begin_array("pGraph", c->pGraph, G_TOTAL);
                     for (size_t j=0; j<G_TOTAL; ++j)
                         v->write(c->pGraph[j]);
